--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Professional AI Editor</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Kanit:wght@300;400;600&family=Prompt:wght@300;400;600&family=Sarabun:wght@300;400;600&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         darkMode: 'class',
@@ -14,6 +14,9 @@
           extend: {
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
+              sarabun: ['Sarabun', 'sans-serif'],
+              prompt: ['Prompt', 'sans-serif'],
+              kanit: ['Kanit', 'sans-serif'],
             },
             colors: {
               gray: {
